<!--
  ~ Copyright (C) 2015 by Sergey Omarov
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~ Created by serg 21.05.15 20:19
  -->

<resources>
    <string name="app_name">2 NE</string>

    <string name="drawer_item_settings">Настройки</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Контакты</string>


    <string name="error_background_task">Ошибка запроса к серверу</string>
    <string name="exception_network">Ошибка сети</string>
    <string name="xml_error">Ошибка xml</string>
    <string name="connection_error">Ошибка соединения</string>
    <string name="page_title">Заголовок</string>
    <string name="updated">обновлено</string>
    <string name="date_format_error">Ошибка формата даты</string>
    <string name="exception_load_article">Ошибка загрузки статьи</string>
    <string name="menu_refresh">обновить</string>
    <string name="search_title">Поиск по заголовкам и пользователям</string>
    <string name="menu_up">На уровень вверх</string>
    <string name="menu_home">В начало</string>
    <string name="menu_down">На уровень вниз</string>
    <string name="menu_favorites">Отмеченные</string>
    <string name="menu_add">Написать сообщение</string>
    <string name="events_load">Событий загружено: %d</string>
    <string name="menu_sign_in">Авторизация</string>
    <string name="title_login">Авторизация</string>
    <string name="menu_download">Загрузить</string>
    <string name="task_load_articles">Загружено статей: %d</string>
    <string name="title_new_article">Новое сообщение</string>
    <string name="task_size">Запущено задач: %d</string>
    <string name="logout_action">Выход</string>
    <string name="login_action">Вход</string>
    <string name="action_cancel">Отменить</string>

    <string name="test_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="test_short">Lorem ipsum dolor sit amet</string>
    <string name="to_root">В корень</string>
    <string name="post_action">Ok</string>
    <string name="title_preview_article">Предварительный просмотр</string>
    <string name="preview_action">Смотреть</string>
    <string name="clear_action">Чистить</string>
    <string name="refreshing_tree">Обновляется дерево</string>
    <string name="bytes">( %d байт )</string>
    <string name="error_get_xml_tree">Ошибка загрузки дерева %d</string>
    <string name="title_preferences_activity">Настройки</string>
    <string name="menu_preferences">Настройки</string>
    <string name="preference_username_passwd_summary">Авторизация</string>
    <string name="preference_username_summary">Введите имя пользователя</string>
    <string name="preference_passwd_summary">Введите пароль</string>
    <string name="preference_title_settings_application">Настройки просмотра</string>
    <string name="title_detail_preference">Сообщения в дереве</string>
    <string name="summary_detail_preference">Показ сообщений в дереве</string>
    <string name="title_about_preference">О программе</string>
    <string name="summary_abount_preference">О программе</string>
    <string name="title_about_activity">О программе</string>
    <string name="not_login">Вы не авторизованы</string>
    <string name="about"><![CDATA[Клиент для форума сайта\n vif2ne.ru]]></string>
    <string name="subject">Тема</string>
    <string name="article_body">Сообщение</string>
    <string name="summary_find_users_preference">Искать авторов, а не темы</string>
    <string name="title_find_users_preference">Искать авторов</string>
    <string name="preference_title">Настройки</string>
    <string name="author_template"><![CDATA[<b>%s</b>]]></string>
    <string name="author_replay_template">к %s</string>
    <string name="menu_smoking">Курилка</string>
    <string name="error_get_xml_smoking">Ошибка загрузки курилки</string>
    <string name="title_smoking_activity">Курилка</string>
    <string name="menu_smoking_send">Отправить сообщение</string>
    <string name="send">Отправить</string>
    <string name="smoking_private">лично</string>
    <string name="vif2ne">ВИФ2НЕ</string>
    <string name="account_already_exists">Аккаунт уже существует</string>
</resources>
