<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 by Sergey Omarov
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~ Created by serg 24.05.15 20:04
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"

    android:title="@string/preference_title">

    <PreferenceCategory
        android:icon="@drawable/ic_action_action_settings"
        android:title="@string/preference_title_settings_application">
        <CheckBoxPreference
            android:key="pref_detail"
            android:summary="@string/summary_detail_preference"
            android:title="@string/title_detail_preference" />
        <CheckBoxPreference
            android:key="pref_find_users"
            android:summary="@string/summary_find_users_preference"
            android:title="@string/title_find_users_preference" />

    </PreferenceCategory>
    <PreferenceScreen
        android:icon="@drawable/ic_action_social_person"
        android:title="@string/preference_username_passwd_summary">
        <intent
            android:targetClass="ru.vif2ne.ui.LoginDialog"
            android:targetPackage="ru.vif2ne"/>
    </PreferenceScreen>
    <PreferenceScreen
        android:icon="@drawable/ic_action_action_info_outline"
        android:key="about"
        android:title="@string/title_about_activity">
        <intent
            android:targetClass="ru.vif2ne.ui.AboutActivity"
            android:targetPackage="ru.vif2ne"/>
    </PreferenceScreen>

</PreferenceScreen>