<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 by Sergey Omarov
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~ Created by serg 21.05.15 20:19
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:background="@color/tab_odd"
    android:orientation="vertical">

    <WebView
        android:id="@+id/web_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/edit_article_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/tab_even"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/entry_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="New Text" />

                    <TextView
                        android:id="@+id/entry_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="New Text" />
                </LinearLayout>

                <TextView
                    android:id="@+id/entry_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="New Text" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/entry_to_root"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_root" />

            <EditText
                android:id="@+id/entry_new_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/subject" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/entry_edit_article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/article_body"
                android:inputType="textMultiLine" />
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clear_action"
                style="@style/Button.Flat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_action" />

            <Button
                android:id="@+id/preview_action"
                style="@style/Button.Flat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preview_action" />

            <Button
                android:id="@+id/post_action"
                style="@style/Button.Flat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_action" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>